Tidy code and add tests
Signed-off-by: Chris Jackson <chris@cd-jackson.com>